hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
spec:
  containers:
    - name: nginx2
      image: 'nginx:1.14.2'
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: deploy-vol2
  volumes:
    - name: deploy-vol2
      hostPath:
        path: /usr
        type: DirectoryOrCreate
