loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo
  ports:
    - port: 8000
      targetPort: 8080
  type: LoadBalancer
