ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     # alb.ingress.kubernetes.io/certificate-arn: <acm-arn>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
      # alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/subnets: subnet-08bdafb7ecce21be5,subnet-016426de7d5e6c422
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: ingress-app
  namespace: default
spec:
  ingressClassName: alb
  rules:
  - host: uateksapi.bkimechanical.com
    http:
      paths:
      - backend:
          service:
            name: bki-api
            port:
              number: 80
        path: /
        pathType: Prefix
